test/libsolidity/syntaxTests/parsing/mapping_no_datalocation.sol
contract c {
    mapping(uint => uint) y;
    function f() view public {
        mapping(uint => uint) x = y;
        x;
    }
}
// ----
// TypeError: (81-104): Data location must be specified as either "memory" or "storage".
